test/Fail/Issue478.err
Issue478.agda:12.9-12: error: [UnequalTypes]
The type
  Set₁
is not a subtype of
  T
when checking that the expression Set has type T
